# esp-aws-iot

./: .gitmodules  CMakeLists.txt  Kconfig
port/: iot_config.h  iot_threads_freertos.c
port/platform/: iot_platform_types_freertos.h
port/private/: iot_config.h
port/types/: iot_platform_types.h
