set(libs aws-iot-device-sdk-embedded-C/libraries)
set(ports aws-iot-device-sdk-embedded-C/ports)
set(thirdparty aws-iot-device-sdk-embedded-C/third_party)

idf_component_register(SRCS
                            "port/iot_clock_freertos.c"
                            "port/iot_threads_freertos.c"
                            "${ports}/common/src/iot_network_metrics.c"
                            "${libs}/aws/common/src/aws_iot_operation.c"
                            "${libs}/aws/common/src/aws_iot_parser.c"
                            "${libs}/aws/common/src/aws_iot_subscription.c"
                            "${libs}/aws/common/src/aws_iot_validate.c"
                            "${libs}/aws/defender/src/aws_iot_defender_api.c"
                            "${libs}/aws/defender/src/aws_iot_defender_collector.c"
                            "${libs}/aws/defender/src/aws_iot_defender_mqtt.c"
                            "${libs}/aws/jobs/src/aws_iot_jobs_api.c"
                            "${libs}/aws/jobs/src/aws_iot_jobs_operation.c"
                            "${libs}/aws/jobs/src/aws_iot_jobs_serialize.c"
                            "${libs}/aws/jobs/src/aws_iot_jobs_static_memory.c"
                            "${libs}/aws/jobs/src/aws_iot_jobs_subscription.c"
                            "${libs}/aws/shadow/src/aws_iot_shadow_api.c"
                            "${libs}/aws/shadow/src/aws_iot_shadow_operation.c"
                            "${libs}/aws/shadow/src/aws_iot_shadow_parser.c"
                            "${libs}/aws/shadow/src/aws_iot_shadow_static_memory.c"
                            "${libs}/aws/shadow/src/aws_iot_shadow_subscription.c"
                            "${libs}/standard/common/src/iot_init.c"
                            "${libs}/standard/common/src/iot_logging.c"
                            "${libs}/standard/common/src/iot_static_memory_common.c"
                            "${libs}/standard/common/src/iot_taskpool.c"
                            "${libs}/standard/common/src/iot_taskpool_static_memory.c"
                            "${libs}/standard/mqtt/src/iot_mqtt_api.c"
                            "${libs}/standard/mqtt/src/iot_mqtt_network.c"
                            "${libs}/standard/mqtt/src/iot_mqtt_operation.c"
                            "${libs}/standard/mqtt/src/iot_mqtt_serialize.c"
                            "${libs}/standard/mqtt/src/iot_mqtt_static_memory.c"
                            "${libs}/standard/mqtt/src/iot_mqtt_subscription.c"
                            "${libs}/standard/mqtt/src/iot_mqtt_validate.c"
                            "${libs}/standard/serializer/src/iot_json_utils.c"
                            "${libs}/standard/serializer/src/iot_serializer_static_memory.c"
                            "${libs}/standard/serializer/src/cbor/iot_serializer_tinycbor_decoder.c"
                            "${libs}/standard/serializer/src/cbor/iot_serializer_tinycbor_encoder.c"
                            "${thirdparty}/tinycbor/tinycbor/src/cborencoder.c"
                            "${thirdparty}/tinycbor/tinycbor/src/cborencoder_close_container_checked.c"
                            "${thirdparty}/tinycbor/tinycbor/src/cborerrorstrings.c"
                            "${thirdparty}/tinycbor/tinycbor/src/cborparser.c"
                            "${thirdparty}/tinycbor/tinycbor/src/cborparser_dup_string.c"
                            "${thirdparty}/tinycbor/tinycbor/src/cborpretty.c"
                            "${thirdparty}/tinycbor/tinycbor/src/cborpretty_stdio.c"
                       INCLUDE_DIRS "${libs}"
                                    "${libs}/aws/common/include"
                                    "${libs}/aws/defender/include"
                                    "${libs}/aws/jobs/include"
                                    "${libs}/aws/shadow/include"
                                    "${libs}/platform"
                                    "${libs}/standard/common/include"
                                    "${libs}/standard/mqtt/include"
                                    "${libs}/standard/serializer/include"
                                    "${thirdparty}/tinycbor/tinycbor/src"
                       PRIV_INCLUDE_DIRS "port/private"
                                         "${ports}/common/include"
                                         "${libs}/aws/defender/src/private"
                                         "${libs}/aws/jobs/src/private"
                                         "${libs}/aws/shadow/src/private"
                                         "${libs}/standard/common/src/private"
                                         "${libs}/standard/mqtt/src/private"
                            REQUIRES "mbedtls")
